unpackaged/main/default/objects/PR_Team__c/PR_Team__c.object-meta.xml
<CustomObject>
    <description>This object captures the users who can Collaborate on the PR</description>
    <label>PR Team</label>
    <nameField>
        <displayFormat>PRT-{000000}</displayFormat>
        <label>PR Team Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PR Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>