unpackaged/main/default/objects/PR_Team__c/fields/Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Collaborator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user to collaborate on PR process</inlineHelpText>
    <label>Collaborator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PR_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>