unpackaged/main/default/objects/PR_Team__c/fields/PR_Header__c.field-meta.xml
<CustomField>
    <fullName>PR_Header__c</fullName>
    <label>PR Header</label>
    <referenceTo>PR_Header__c</referenceTo>
    <relationshipLabel>PR Collaboration Team</relationshipLabel>
    <relationshipName>PR_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>