unpackaged/main/default/objects/PR_Team__c/fields/PR_Header_Link__c.field-meta.xml
<CustomField>
    <fullName>PR_Header_Link__c</fullName>
    <formula>HYPERLINK("/" &amp;  PR_Header__c, "Click To View")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Header Link</label>
    <type>Text</type>
</CustomField>