unpackaged/main/default/objects/PR_Team__c/validationRules/AccessLevel_Can_Not_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>AccessLevel_Can_Not_Be_Changed</fullName>
    <active>true</active>
    <description>Once the record is created, you can not change the user Access Level</description>
    <errorConditionFormula>ISCHANGED(Access_Level__c)</errorConditionFormula>
    <errorMessage>You can not change the Access Level. Instead delete the record and create a new record.</errorMessage>
</ValidationRule>