unpackaged/main/default/objects/PR_Team__c/validationRules/Collaborator_Can_Not_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Collaborator_Can_Not_Be_Changed</fullName>
    <active>true</active>
    <description>Once the record is created, you can not change the Collaborator user</description>
    <errorConditionFormula>ISCHANGED(Collaborator__c)</errorConditionFormula>
    <errorMessage>You can not change the Collaborator. Instead delete the record and create a new record.</errorMessage>
</ValidationRule>