unpackaged/main/default/objects/PR_Team__c/validationRules/Self_Assignment_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Self_Assignment_Validation</fullName>
    <active>true</active>
    <description>If user selected the Collaborator as self user throw error</description>
    <errorConditionFormula>Collaborator__c =  PR_Header_OwnerID__c</errorConditionFormula>
    <errorMessage>Can not self assign.You are the owner of the record with full access.</errorMessage>
</ValidationRule>